# wordpress-infra-ansible

./: .gitignore  README.md  pyproject.toml  test.yml  web.yml
inventories/development/group_vars/: main.yml
inventories/lxd/: hosts
inventories/lxd/group_vars/: all.yml
inventories/lxd/host_vars/: c1.yml  dev.twothreebird.com.yml  dev.velosure.com.au.yml  twothreebird.com.yml  velosure.com.au.yml
roles/base/handlers/: main.yml
roles/base/tasks/: main.yml
roles/cleanup/tasks/: main.yml
roles/nginx.orig/defaults/: main.yml
roles/nginx.orig/files/common/: wpfc-php74.conf
roles/nginx.orig/files/snippets/: brotli.conf  limits.conf  php-fastcgi.conf  security.conf  static-files.conf  wordpress.conf
roles/nginx.orig/handlers/: main.yml
roles/nginx.orig/tasks/: host.yml  main.yml
roles/nginx.orig/templates/: host.conf.j2  nginx.conf.j2
roles/nginx/defaults/: main.yml
roles/nginx/files/common/: locations.conf  wpfc-php74.conf
roles/nginx/tasks/: host.yml  main.yml
roles/nginx/templates/: host.conf.j2  nginx.conf.j2
roles/php/defaults/: main.yml
roles/php/handlers/: main.yml
roles/php/tasks/: configure-fpm.yml  configure-opcache.yml  configure.yml  install-composer.yml  main.yml  setup-Ubuntu.yml
roles/php/templates/: opcache.ini.j2  php.ini.j2  www.conf.j2
roles/php/vars/: main.yml
roles/swap.orig/defaults/: main.yml
roles/swap.orig/meta/: main.yml
roles/swap.orig/tasks/: main.yml
roles/user/tasks/: main.yml
scripts/: delete-containers.sh  launch-containers.sh  start-containers.sh  stop-containers.sh
(+7 files in other folders)
