[tool.poetry]
name = "wordpress-ec2-hosts"
version = "0.1.0"
description = ""
authors = ["Björn Theart <bjorntheart@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ansible = "^5.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
